# chess_proj

./: Board.cpp  Board.h  CMakeLists.txt  Game.cpp  Game.h  Piece.cpp  Piece.h  README.txt  main.cpp
Doctests/: BoardTests.cpp  CMakeLists.txt  GameTests.cpp
GameLogic_lib/: Board.cpp  Board.h  CMakeLists.txt  ChessPositionAndMovement.h  Game.cpp  Game.h
GameLogic_lib/Pieces/: King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Queen.cpp  Rook.cpp
Pieces/: AllPieces.h  Bishop.cpp  Bishop.h  King.cpp  Piece.h  Queen.h  Rook.h
